--- a/docs/docs/cmd/aad/group/group-user-list.mdx
+++ b/docs/docs/cmd/aad/group/group-user-list.mdx
@@ -9,7 +9,7 @@ Lists users of a specific Azure AD group
 ## Usage
 
 ```sh
-aad group user list [options]
+m365 aad group user list [options]
 ```
 
 ## Options
@@ -22,7 +22,7 @@ aad group user list [options]
 : The display name of the Azure AD group. Specify `groupId` or `groupDisplayName` but not both.
 
 `-r, --role [role]`
-: Filter the results to only users with the given role: `Owner`, `Member`, `Guest`.
+: Filter the results to only users with the given role: `Owner`, `Member`.
 ```
 
 <Global />
