--- a/docs/docs/cmd/spo/app/app-get.mdx
+++ b/docs/docs/cmd/spo/app/app-get.mdx
@@ -23,7 +23,7 @@ m365 spo app get [options]
 : URL of the tenant or site collection app catalog. It must be specified when the scope is `sitecollection`.
 
 `-s, --appCatalogScope [appCatalogScope]`
-: Scope of the app catalog. Possible values are: `tenant`, `sitecollection`. Default `tenant`.
+: Scope of the app catalog. Allowed values: `tenant`, `sitecollection`. Defaults to `tenant`.
 ```
 
 <Global />
