--- a/docs/docs/cmd/spo/app/app-list.mdx
+++ b/docs/docs/cmd/spo/app/app-list.mdx
@@ -14,7 +14,7 @@ m365 spo app list [options]
 
 ```md definition-list
 `-s, --appCatalogScope [appCatalogScope]`
-: Target app catalog. Possible values are: `tenant`, `sitecollection`. Default `tenant`.
+: Target app catalog. Allowed values: `tenant`, `sitecollection`. Defaults to `tenant`.
 
 `-u, --appCatalogUrl [appCatalogUrl]`
 : URL of the tenant or site collection app catalog. It must be specified when the scope is `sitecollection`.
