--- a/docs/docs/cmd/spo/app/app-remove.mdx
+++ b/docs/docs/cmd/spo/app/app-remove.mdx
@@ -20,7 +20,7 @@ m365 spo app remove [options]
 : URL of the tenant or site collection app catalog. It must be specified when the scope is `sitecollection`.
 
 `-s, --appCatalogScope [appCatalogScope]`
-: Scope of the app catalog. Possible values are: `tenant`, `sitecollection`. Default `tenant`.
+: Scope of the app catalog. Allowed values: `tenant`, `sitecollection`. Defaults to `tenant`.
 
 `-f, --force`
 : Don't prompt for confirming removing the app.
