--- a/docs/docs/cmd/spo/app/app-uninstall.mdx
+++ b/docs/docs/cmd/spo/app/app-uninstall.mdx
@@ -20,7 +20,7 @@ m365 spo app uninstall [options]
 : Absolute URL of the site to uninstall the app from.
 
 `--appCatalogScope [appCatalogScope]`
-: Scope of the app catalog. Possible values are: `tenant`, `sitecollection`. Default `tenant`.
+: Scope of the app catalog. Allowed values: `tenant`, `sitecollection`. Default to `tenant`.
 
 `-f, --force`
 : Don't prompt for confirming uninstalling the app.
