--- a/docs/docs/cmd/spo/app/app-upgrade.mdx
+++ b/docs/docs/cmd/spo/app/app-upgrade.mdx
@@ -20,7 +20,7 @@ m365 spo app upgrade [options]
 : Absolute URL of the site to upgrade the app in.
 
 `--appCatalogScope [appCatalogScope]`
-: Scope of the app catalog. Possible values are: `tenant`, `sitecollection`. Default `tenant`.
+: Scope of the app catalog. Allowed values: `tenant`, `sitecollection`. Defaults to `tenant`.
 ```
 
 <Global />
