--- a/docs/docs/cmd/spo/cdn/cdn-set.mdx
+++ b/docs/docs/cmd/spo/cdn/cdn-set.mdx
@@ -17,7 +17,7 @@ m365 spo cdn set [options]
 : Set to true to enable CDN or to false to disable it. Valid values are `true`, `false`.
 
 `-t, --type [type]`
-: Type of CDN to manage. Possible values are: `Public`, `Private`, `Both`. Default `Public`.
+: Type of CDN to manage. Allowed values: `Public`, `Private`, `Both`. Defaults to `Public`.
 
 `--noDefaultOrigins`
 : pass to not create the default origins.
