--- a/docs/docs/cmd/spo/contenttype/contenttype-set.mdx
+++ b/docs/docs/cmd/spo/contenttype/contenttype-set.mdx
@@ -20,7 +20,7 @@ m365 spo contenttype set [options]
 : ID of the content type to update. Specify either `id` or `name` but not both.
 
 `-n, --name [name]`
-: Name of the content type to update. Specify either `id` or the `name` but not both.
+: Name of the content type to update. Specify either `id` or `name` but not both.
 
 `--listTitle [listTitle]`
 : Title of the list if you want to update a list content type. Specify either `listTitle`, `listId` or `listUrl`.
