--- a/docs/docs/cmd/spo/customaction/customaction-set.mdx
+++ b/docs/docs/cmd/spo/customaction/customaction-set.mdx
@@ -14,7 +14,7 @@ m365 spo customaction set [options]
 
 ```md definition-list
 `-u, --webUrl <webUrl>`
-: Url of the site or site collection to update the custom action..
+: Url of the site or site collection to update the custom action.
 
 `-i, --id <id>`
 : ID of the custom action to update.
