--- a/docs/docs/cmd/spo/eventreceiver/eventreceiver-get.mdx
+++ b/docs/docs/cmd/spo/eventreceiver/eventreceiver-get.mdx
@@ -41,31 +41,31 @@ m365 spo eventreceiver get [options]
 
 ## Examples
 
-Retrieve event receiver in the specified web with given name.
+Retrieve an event receiver in the specified web with the given name.
 
 ```sh
 m365 spo eventreceiver get --webUrl https://contoso.sharepoint.com/sites/contoso-sales --name 'PnP Test Receiver'
 ```
 
-Retrieve event receiver in the specified site with given id.
+Retrieve an event receiver in the specified site with the given id.
 
 ```sh
 m365 spo eventreceiver get --webUrl https://contoso.sharepoint.com/sites/contoso-sales --scope site --id c5a6444a-9c7f-4a0d-9e29-fc6fe30e34ec
 ```
 
-Retrieve event receiver for list with given title in the specified web with given name.
+Retrieve an event receiver for list with given title in the specified web with the given name.
 
 ```sh
 m365 spo eventreceiver get --webUrl https://contoso.sharepoint.com/sites/contoso-sales --listTitle Events --name 'PnP Test Receiver'
 ```
 
-Retrieve event receiver for list with given ID in the specified web with given id.
+Retrieve an event receiver for list with given ID in the specified web with the given id.
 
 ```sh
 m365 spo eventreceiver get --webUrl https://contoso.sharepoint.com/sites/contoso-sales --listId '202b8199-b9de-43fd-9737-7f213f51c991' --id c5a6444a-9c7f-4a0d-9e29-fc6fe30e34ec
 ```
 
-Retrieve event receiver for list with given url in the specified web with given name.
+Retrieve an event receiver for list with given url in the specified web with the given name.
 
 ```sh
 m365 spo eventreceiver get --webUrl https://contoso.sharepoint.com/sites/contoso-sales --listUrl '/sites/contoso-sales/lists/Events' --name 'PnP Test Receiver'
