--- a/docs/docs/cmd/spo/eventreceiver/eventreceiver-list.mdx
+++ b/docs/docs/cmd/spo/eventreceiver/eventreceiver-list.mdx
@@ -33,7 +33,7 @@ m365 spo eventreceiver list [options]
 
 ## Examples
 
-Retrieves event receivers in the specified web.
+Retrieves event receivers in the specified site.
 
 ```sh
 m365 spo eventreceiver list --webUrl https://contoso.sharepoint.com/sites/contoso-sales
@@ -45,19 +45,19 @@ Retrieves event receivers in the specified site.
 m365 spo eventreceiver list --webUrl https://contoso.sharepoint.com/sites/contoso-sales --scope site
 ```
 
-Retrieves event receivers for list with given title in the specified web.
+Retrieves event receivers for list with given title in the specified site.
 
 ```sh
 m365 spo eventreceiver list --webUrl https://contoso.sharepoint.com/sites/contoso-sales --listTitle Events
 ```
 
-Retrieves event receivers for list with given ID in the specified web.
+Retrieves event receivers for list with given ID in the specified site.
 
 ```sh
 m365 spo eventreceiver list --webUrl https://contoso.sharepoint.com/sites/contoso-sales --listId '202b8199-b9de-43fd-9737-7f213f51c991'
 ```
 
-Retrieves event receivers for list with given url in the specified web.
+Retrieves event receivers for list with given url in the specified site.
 
 ```sh
 m365 spo eventreceiver list --webUrl https://contoso.sharepoint.com/sites/contoso-sales --listUrl '/sites/contoso-sales/lists/Events'
