--- a/docs/docs/cmd/spo/app/app-deploy.mdx
+++ b/docs/docs/cmd/spo/app/app-deploy.mdx
@@ -26,7 +26,7 @@ m365 spo app deploy [options]
 : If the app supports tenant-wide deployment, deploy it to the whole tenant.
 
 `-s, --appCatalogScope [appCatalogScope]`
-: Scope of the app catalog. Possible values are: `tenant`, `sitecollection`. Default `tenant`.
+: Scope of the app catalog. Allowed values: `tenant`, `sitecollection`. Defaults to `tenant`.
 ```
 
 <Global />
