--- a/docs/docs/cmd/external/connection/connection-list.mdx
+++ b/docs/docs/cmd/external/connection/connection-list.mdx
@@ -2,14 +2,20 @@ import Global from '/docs/cmd/_global.mdx';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-# search externalconnection list
+# external connection list
 
-Lists external connections defined in Microsoft Search
+Lists external connections
 
 ## Usage
 
 ```sh
-m365 search externalconnection list [options]
+m365 external connection list [options]
+```
+
+## Alias
+
+```sh
+m365 search externalconnection list
 ```
 
 ## Options
@@ -18,10 +24,10 @@ m365 search externalconnection list [options]
 
 ## Examples
 
-List external connections defined in Microsoft Search
+List external connections.
 
 ```sh
-m365 search externalconnection list
+m365 external connection list
 ```
 
 ## Response
@@ -69,7 +75,7 @@ m365 search externalconnection list
   <TabItem value="Markdown">
 
   ```md
-  # search externalconnection list
+  # external connection list
 
   Date: 2022-09-05
 
@@ -85,4 +91,3 @@ m365 search externalconnection list
 
   </TabItem>
 </Tabs>
-
