--- a/docs/docs/cmd/external/connection/connection-add.mdx
+++ b/docs/docs/cmd/external/connection/connection-add.mdx
@@ -1,26 +1,32 @@
 import Global from '/docs/cmd/_global.mdx';
 
-# search externalconnection add
+# external connection add
 
-Add a new external connection to be defined for Microsoft Search
+Add a new external connection
 
 ## Usage
 
 ```sh
-m365 search externalconnection add [options]
+m365 external connection add [options]
+```
+
+## Alias
+
+```sh
+m365 search externalconnection add
 ```
 
 ## Options
 
 ```md definition-list
 `-i, --id <id>`
-: Developer-provided unique ID of the connection within the Azure Active Directory tenant
+: Developer-provided unique ID of the connection within the Azure Active Directory tenant.
 
 `-n, --name <name>`
-: The display name of the connection to be displayed in the Microsoft 365 admin center. Maximum length of 128 characters
+: The display name of the connection to be displayed in the Microsoft 365 admin center. Maximum length of 128 characters.
 
 `-d, --description <description>`
-: Description of the connection displayed in the Microsoft 365 admin center
+: Description of the connection displayed in the Microsoft 365 admin center.
 
 `--authorizedAppIds [authorizedAppIds]`
 : Comma-separated collection of application IDs for registered Azure Active Directory apps that are allowed to manage the external connection and to index content in the external connection.
@@ -34,16 +40,16 @@ The `id` must be at least 3 and no more than 32 characters long. It can contain 
 
 ## Examples
 
-Adds a new external connection with name and description of test app
+Adds a new external connection with name and description of test app.
 
 ```sh
-m365 search externalconnection add --id MyApp --name "Test" --description "Test"
+m365 external connection add --id MyApp --name "Test" --description "Test"
 ```
 
-Adds a new external connection with a limited number of authorized apps
+Adds a new external connection with a limited number of authorized apps.
 
 ```sh
-m365 search externalconnection add --id MyApp --name "Test" --description "Test" --authorizedAppIds  "00000000-0000-0000-0000-000000000000,00000000-0000-0000-0000-000000000001,00000000-0000-0000-0000-000000000002"
+m365 external connection add --id MyApp --name "Test" --description "Test" --authorizedAppIds  "00000000-0000-0000-0000-000000000000,00000000-0000-0000-0000-000000000001,00000000-0000-0000-0000-000000000002"
 ```
 
 ## Response
