--- a/docs/docs/cmd/spo/cdn/cdn-set.mdx
+++ b/docs/docs/cmd/spo/cdn/cdn-set.mdx
@@ -14,7 +14,7 @@ m365 spo cdn set [options]
 
 ```md definition-list
 `-e, --enabled <enabled>`
-: Set to true to enable CDN or to false to disable it. Valid values are `true`, `false`.
+: Set to true to enable CDN or to false to disable it. Allowed values: `true`, `false`.
 
 `-t, --type [type]`
 : Type of CDN to manage. Allowed values: `Public`, `Private`, `Both`. Defaults to `Public`.
