--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -85,6 +85,7 @@ sidebar_position: 4
 - removed Node 16 workflow
 - aligned options and documentation power platform. [#5411](https://github.com/pnp/cli-microsoft365/issues/5411)
 - renamed option for 'spo user get'. [#5515](https://github.com/pnp/cli-microsoft365/issues/5515)
+- renamed 'search externalconnection [verb]' commands to 'to external connection [verb]' [#5531](https://github.com/pnp/cli-microsoft365/issues/5531)
 
 ## [v6.11.0](https://github.com/pnp/cli-microsoft365/releases/tag/v6.11.0)
 
@@ -712,10 +713,6 @@ sidebar_position: 4
 - [purview retentionlabel list](../cmd/purview/retentionlabel/retentionlabel-list.mdx) - get a list of retention labels [#4144](https://github.com/pnp/cli-microsoft365/issues/4144)
 - [purview retentionlabel remove](../cmd/purview/retentionlabel/retentionlabel-remove.mdx) - deletes a retention label [#4149](https://github.com/pnp/cli-microsoft365/issues/4149)
 - [purview retentionlabel set](../cmd/purview/retentionlabel/retentionlabel-set.mdx) - updates a retention label [#4148](https://github.com/pnp/cli-microsoft365/issues/4148)
-
-**Search:**
-
-- [search externalconnection schema add](../cmd/search/externalconnection/externalconnection-schema-add.mdx) - adds a schema to a specific external connection [#3171](https://github.com/pnp/cli-microsoft365/issues/3171)
 
 **SharePoint:**
 
