--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -85,7 +85,6 @@ sidebar_position: 4
 - removed Node 16 workflow
 - aligned options and documentation power platform. [#5411](https://github.com/pnp/cli-microsoft365/issues/5411)
 - renamed option for 'spo user get'. [#5515](https://github.com/pnp/cli-microsoft365/issues/5515)
-- renamed 'search externalconnection [verb]' commands to 'to external connection [verb]' [#5531](https://github.com/pnp/cli-microsoft365/issues/5531)
 
 ## [v6.11.0](https://github.com/pnp/cli-microsoft365/releases/tag/v6.11.0)
 
@@ -714,6 +713,10 @@ sidebar_position: 4
 - [purview retentionlabel remove](../cmd/purview/retentionlabel/retentionlabel-remove.mdx) - deletes a retention label [#4149](https://github.com/pnp/cli-microsoft365/issues/4149)
 - [purview retentionlabel set](../cmd/purview/retentionlabel/retentionlabel-set.mdx) - updates a retention label [#4148](https://github.com/pnp/cli-microsoft365/issues/4148)
 
+**Search:**
+
+- [search externalconnection schema add](../cmd/external/connection/connection-schema-add.mdx) - adds a schema to a specific external connection [#3171](https://github.com/pnp/cli-microsoft365/issues/3171)
+
 **SharePoint:**
 
 - [spo listitem retentionlabel remove](../cmd/spo/listitem/listitem-retentionlabel-remove.mdx) - clears the retention label from a list item [#4162](https://github.com/pnp/cli-microsoft365/issues/4162)
@@ -1044,7 +1047,7 @@ sidebar_position: 4
 
 **Search:**
 
-- [search externalConnections remove](../cmd/search/externalconnection/externalconnection-remove.mdx) - allows the administrator to remove a specific external connection used in Microsoft Search [#3170](https://github.com/pnp/cli-microsoft365/issues/3170)
+- [search externalConnections remove](../cmd/external/connection/connection-remove.mdx) - allows the administrator to remove a specific external connection used in Microsoft Search [#3170](https://github.com/pnp/cli-microsoft365/issues/3170)
 
 ### Changes
 
@@ -1087,7 +1090,7 @@ sidebar_position: 4
 
 **Search:**
 
-- [search externalconnection get](../cmd/search/externalconnection/externalconnection-get.mdx) - allows the administrator to get a specific external connection for use in Microsoft Search [#3169](https://github.com/pnp/cli-microsoft365/issues/3169)
+- [search externalconnection get](../cmd/external/connection/connection-get.mdx) - allows the administrator to get a specific external connection for use in Microsoft Search [#3169](https://github.com/pnp/cli-microsoft365/issues/3169)
 
 **SharePoint:**
 
@@ -1217,7 +1220,7 @@ sidebar_position: 4
 
 **Search:**
 
-- [search externalConnections list](../cmd/search/externalconnection/externalconnection-list.mdx) - lists external connections defined in Microsoft Search [#2790](https://github.com/pnp/cli-microsoft365/issues/2790)
+- [search externalConnections list](../cmd/external/connection/connection-list.mdx) - lists external connections defined in Microsoft Search [#2790](https://github.com/pnp/cli-microsoft365/issues/2790)
 
 **Tenant:**
 
@@ -1464,7 +1467,7 @@ sidebar_position: 4
 
 **Microsoft Search:**
 
-- [search externalconnection add](../cmd/search/externalconnection/externalconnection-add.mdx) - adds a new external connection to be defined for Microsoft Search [#2662](https://github.com/pnp/cli-microsoft365/issues/2662)
+- [search externalconnection add](../cmd/external/connection/connection-add.mdx) - adds a new external connection to be defined for Microsoft Search [#2662](https://github.com/pnp/cli-microsoft365/issues/2662)
 
 **Planner:**
 
@@ -2563,7 +2566,7 @@ sidebar_position: 4
 
 **SharePoint Online:**
 
-- [spo apppage set](../cmd/spo/apppage/apppage-set.mdx) - updates the single-part app page [#875](https://github.com/pnp/cli-microsoft365/issues/875)
+- [spo apppage set](../cmd/spo/apppage/apppage-set.mdx) - updates the single-part app page [#875](https://github.com/pnp/cli-microsoft365/issues/875)
 - [spo feature enable](../cmd/spo/feature/feature-enable.mdx) - enables feature for the specified site or web [#675](https://github.com/pnp/cli-microsoft365/issues/675)
 
 **Microsoft Teams:**
