--- a/docs/docs/cmd/spo/group/group-member-add.mdx
+++ b/docs/docs/cmd/spo/group/group-member-add.mdx
@@ -54,22 +54,10 @@ Add a user with the userNames parameter to a SharePoint group with the groupId p
 m365 spo group member add --webUrl https://contoso.sharepoint.com/sites/SiteA --groupId 5 --userNames "Alex.Wilber@contoso.com"
 ```
 
-Add multiple users with the userNames parameter to a SharePoint group with the groupId parameter.
-
-```sh
-m365 spo group member add --webUrl https://contoso.sharepoint.com/sites/SiteA --groupId 5 --userNames "Alex.Wilber@contoso.com, Adele.Vance@contoso.com"
-```
-
 Add a user with the emails parameter to a SharePoint group with the groupName parameter.
 
 ```sh
 m365 spo group member add --webUrl https://contoso.sharepoint.com/sites/SiteA --groupName "Contoso Site Owners" --emails "Alex.Wilber@contoso.com"
-```
-
-Add multiple users with the emails parameter to a SharePoint group with the groupName parameter.
-
-```sh
-m365 spo group member add --webUrl https://contoso.sharepoint.com/sites/SiteA --groupName "Contoso Site Owners" --emails "Alex.Wilber@contoso.com, Adele.Vance@contoso.com"
 ```
 
 Add a user with the userIds parameter to a SharePoint group with the groupId parameter.
@@ -78,11 +66,36 @@ Add a user with the userIds parameter to a SharePoint group with the groupId par
 m365 spo group member add --webUrl https://contoso.sharepoint.com/sites/SiteA --groupId 5 --userIds 5
 ```
 
+Add multiple users with the userNames parameter to a SharePoint group with the groupId parameter.
+
+```sh
+m365 spo group member add --webUrl https://contoso.sharepoint.com/sites/SiteA --groupId 5 --userNames "Alex.Wilber@contoso.com, Adele.Vance@contoso.com"
+```
+
+Add multiple users with the emails parameter to a SharePoint group with the groupName parameter.
+
+```sh
+m365 spo group member add --webUrl https://contoso.sharepoint.com/sites/SiteA --groupName "Contoso Site Owners" --emails "Alex.Wilber@contoso.com, Adele.Vance@contoso.com"
+```
+
 Add multiple users with the userIds parameter to a SharePoint group with the groupId parameter.
 
 ```sh
 m365 spo group member add --webUrl https://contoso.sharepoint.com/sites/SiteA --groupId 5 --userIds "5,12"
 ```
+
+ Add multiple users with the aadGroupIds parameter to a SharePoint group with the groupId parameter.
+  
+ ```sh 
+ m365 spo group member add --webUrl https://contoso.sharepoint.com/sites/SiteA --groupId 5 --aadGroupIds "56ca9023-3449-4e98-a96a-69e81a6f4983,a96c1755-8aec-4f4d-955f-08504510dc56" 
+ ```
+
+Add multiple users with the aadGroupNames parameter to a SharePoint group with the groupId parameter 
+  
+ ```sh 
+ m365 spo group member add --webUrl https://contoso.sharepoint.com/sites/SiteA --groupId 5 --aadGroupNames "Azure group one, Azure group two" 
+ ``` 
+
 
 ## Response
 
