--- a/docs/docs/cmd/planner/task/task-set.mdx
+++ b/docs/docs/cmd/planner/task/task-set.mdx
@@ -70,7 +70,7 @@ m365 planner task set [options]
 : Comma-separated categories that should be added to the task.
 
 `--priority [priority]`
-: Priority of the task: `Urgent`, `Important`, `Medium`, `Low`. Or an integer between 0 and 10 (check remarks section for more info).
+: Priority of the task. Allowed values: `Urgent`, `Important`, `Medium`, `Low`. Or an integer between 0 and 10 (check remarks section for more info).
 ```
 
 <Global />
