--- a/docs/docs/cmd/spo/commandset/commandset-list.mdx
+++ b/docs/docs/cmd/spo/commandset/commandset-list.mdx
@@ -19,7 +19,7 @@ m365 spo commandset list [options]
 : The url of the site.
 
 `-s, --scope [scope]`
-: Scope of the ListView Command Sets. Allowed values `Site`, `Web`, `All`. Default to `All`.
+: Scope of the ListView Command Sets. Allowed values: `Site`, `Web`, `All`. Defaults to `All`.
 ```
 
 <Global />
