--- a/docs/docs/cmd/planner/task/task-add.mdx
+++ b/docs/docs/cmd/planner/task/task-add.mdx
@@ -70,7 +70,7 @@ m365 planner task add [options]
 : Hint used to order items of this type in a list view. The format is defined as outlined [here](https://docs.microsoft.com/graph/api/resources/planner-order-hint-format?view=graph-rest-1.0).
 
 `--priority [priority]`
-: Priority of the task: `Urgent`, `Important`, `Medium`, `Low`. Or an integer between 0 and 10 (check remarks section for more info). Default value is `Medium`.
+: Priority of the task. Allowed values: `Urgent`, `Important`, `Medium`, `Low`. Or an integer between 0 and 10 (check remarks section for more info). Defaults to `Medium`.
 ```
 
 <Global />
