--- a/docs/docs/cmd/spo/feature/feature-disable.mdx
+++ b/docs/docs/cmd/spo/feature/feature-disable.mdx
@@ -20,7 +20,7 @@ m365 spo feature disable [options]
 : The ID of the feature to disable.
 
 `-s, --scope [scope]`
-: Scope of the Feature to disable. Allowed values `Site`, `Web`. Default `Web`.
+: Scope of the Feature to disable. Allowed values: `Site`, `Web`. Defaults to `Web`.
 
 `--force`
 : Specifies whether to continue if an error occurs when disabling the feature.
