--- a/docs/docs/cmd/spo/feature/feature-enable.mdx
+++ b/docs/docs/cmd/spo/feature/feature-enable.mdx
@@ -20,7 +20,7 @@ m365 spo feature enable [options]
 : The ID of the feature to enable.
 
 `-s, --scope [scope]`
-: Scope of the Feature to enable. Allowed values `Site`, `Web`. Default `Web`.
+: Scope of the Feature to enable. Allowed values: `Site`, `Web`. Defaults to `Web`.
 
 `--force`
 : Specifies whether to overwrite an existing feature with the same feature identifier. This parameter is ignored if there are no errors.
