--- a/docs/docs/cmd/spo/file/file-checkin.mdx
+++ b/docs/docs/cmd/spo/file/file-checkin.mdx
@@ -23,7 +23,7 @@ m365 spo file checkin [options]
 : The UniqueId (GUID) of the file to retrieve. Specify either `url` or `id` but not both.
 
 `-t, --type [type]`
-: Type of the check in. Available values `Minor`, `Major`, `Overwrite`. Default is `Major`.
+: Type of the check in. Allowed values: `Minor`, `Major`, `Overwrite`. Defaults to `Major`.
 
 `--comment [comment]`
 : Comment to set when checking the file in. It\'s length must be less than 1024 letters. Default is empty string.
