Adds cross references for commandsets and applicationcustomizers. Closes #5546

--- a/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-get.mdx
+++ b/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-get.mdx
@@ -59,6 +59,10 @@ Retrieves an application customizer by title available at the site scope.
 m365 spo applicationcustomizer get --title "Some customizer" --webUrl https://contoso.sharepoint.com/sites/sales --scope site
 ```
 
+## Remarks
+
+This command can be used for retrieving an application customizer from a specific site. To retrieve an application customizer that's installed tenant-wide, view our dedicated [spo tenant applicationcustomizer get](../tenant/tenant-applicationcustomizer-get.mdx) command.
+
 ## Response
 
 <Tabs>
