--- a/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-list.mdx
+++ b/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-list.mdx
@@ -32,6 +32,10 @@ Retrieves a list of application customizers.
 m365 spo applicationcustomizer list --webUrl https://contoso.sharepoint.com/sites/sales
 ```
 
+## Remarks
+
+This command can be used for retrieving a list of application customizers from a specific site. To retrieve a list of application customizers that are installed tenant-wide, view our dedicated [spo tenant applicationcustomizer list](../tenant/tenant-applicationcustomizer-list.mdx) command.
+
 ## Response
 
 <Tabs>
