--- a/docs/docs/cmd/spo/commandset/commandset-set.mdx
+++ b/docs/docs/cmd/spo/commandset/commandset-set.mdx
@@ -2,7 +2,7 @@ import Global from '/docs/cmd/_global.mdx';
 
 # spo commandset set
 
-Updates a ListView Command Set on a site.
+Updates a ListView Command Set on a site
 
 ## Usage
 
@@ -61,6 +61,8 @@ Note, how the clientSideComponentProperties option has escaped double quotes `'{
 When using the `--clientSideComponentProperties` option it's possible to enter a JSON string. In PowerShell 5 to 7.2 [specific escaping rules](./../../../user-guide/using-cli.mdx#escaping-double-quotes-in-powershell) apply due to an issue. Remember that you can also use [file tokens](./../../../user-guide/using-cli.mdx#passing-complex-content-into-cli-options) instead.
 
 :::
+
+This command can be used for updating a ListView Command Set on a specific site. To update a ListView Command Set that's installed tenant-wide, view our dedicated [spo tenant commandset set](../tenant/tenant-commandset-set.mdx) command.
 
 ## Examples
 
