--- a/docs/docs/cmd/spo/tenant/tenant-applicationcustomizer-add.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-applicationcustomizer-add.mdx
@@ -2,7 +2,7 @@ import Global from '/docs/cmd/_global.mdx';
 
 # spo tenant applicationcustomizer add
 
-Add an application customizer as a tenant wide extension
+Add an application customizer as a tenant-wide extension
 
 ## Usage
 
@@ -49,6 +49,8 @@ When using the `--clientSideComponentProperties` option it's possible to enter a
 To use this command, you need to be a SharePoint Admin.
 
 :::
+
+This command can be used for configuring a tenant-wide application customizer. To configure an application customizer on a specific site, view our dedicated [spo applicationcustomizer add](../applicationcustomizer/applicationcustomizer-add.mdx) command.
 
 ## Examples
 
