--- a/docs/docs/cmd/spo/tenant/tenant-applicationcustomizer-list.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-applicationcustomizer-list.mdx
@@ -16,6 +16,10 @@ m365 spo tenant applicationcustomizer list [options]
 
 <Global />
 
+## Remarks
+
+This command can be used for retrieving a list of tenant-wide installed application customizers. To retrieve a list of application customizers from a specific site, view our dedicated [spo applicationcustomizer list](../applicationcustomizer/applicationcustomizer-list.mdx) command.
+
 ## Examples
 
 Retrieves a list of application customizers.
