--- a/docs/docs/cmd/spo/tenant/tenant-applicationcustomizer-remove.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-applicationcustomizer-remove.mdx
@@ -2,7 +2,7 @@ import Global from '/docs/cmd/_global.mdx';
 
 # spo tenant applicationcustomizer remove
 
-Removes an application customizer that is installed tenant wide
+Removes an application customizer that is installed tenant-wide
 
 ## Usage
 
@@ -27,6 +27,10 @@ m365 spo tenant applicationcustomizer remove [options]
 ```
 
 <Global />
+
+## Remarks
+
+This command can be used for removing an application customizer that's installed tenant-wide. To remove an application customizer from a specific site, view our dedicated [spo applicationcustomizer remove](../applicationcustomizer/applicationcustomizer-remove.mdx) command.
 
 ## Examples
 
