--- a/docs/docs/cmd/spo/tenant/tenant-applicationcustomizer-set.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-applicationcustomizer-set.mdx
@@ -53,6 +53,8 @@ When using the `--clientSideComponentProperties` option it's possible to enter a
 
 :::
 
+This command can be used for updating an application customizer that's installed tenant-wide. To update an application customizer from a specific site, view our dedicated [spo applicationcustomizer set](../applicationcustomizer/applicationcustomizer-set.mdx) command.
+
 ## Examples
 
 Updates the title of an Application Customizer that is deployed as a tenant-wide extension by its id
