--- a/docs/docs/cmd/spo/tenant/tenant-commandset-add.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-commandset-add.mdx
@@ -58,6 +58,8 @@ To use this command, you need to be a SharePoint Admin.
 
 :::
 
+This command can be used for configuring a tenant-wide ListView Command Set. To configure a ListView Command Set on a specific site, view our dedicated [spo commandset add](../commandset/commandset-add.mdx) command.
+
 ## Examples
 
 Adds a ListView Command Set that's deployed tenant wide to CommandBars of Lists.
