--- a/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-add.mdx
+++ b/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-add.mdx
@@ -47,6 +47,8 @@ When using the `--clientSideComponentProperties` option it's possible to enter a
 
 :::
 
+This command can be used for configuring an application customizer on a specific site. To configure an application customizer tenant-wide, view our dedicated [spo tenant applicationcustomizer add](../tenant/tenant-applicationcustomizer-add.mdx) command.
+
 ## Examples
 
 Adds an application customizer to the sales site.
