--- a/docs/docs/cmd/spo/commandset/commandset-list.mdx
+++ b/docs/docs/cmd/spo/commandset/commandset-list.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 
 # spo commandset list
 
-Get a list of ListView Command Sets that are added to a site.
+Get a list of ListView Command Sets that are added to a site
 
 ## Usage
 
@@ -23,6 +23,10 @@ m365 spo commandset list [options]
 ```
 
 <Global />
+
+## Remarks
+
+This command can be used for retrieving a list of ListView Command Sets from a specific site. To retrieve a list of ListView Command Sets that are installed tenant-wide, view our dedicated [spo tenant commandset list](../tenant/tenant-commandset-list.mdx) command.
 
 ## Examples
 
