--- a/docs/docs/cmd/spo/tenant/tenant-commandset-get.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-commandset-get.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 
 # spo tenant commandset get
 
-Get a ListView Command Set that is installed tenant wide
+Get a ListView Command Set that is installed tenant-wide
 
 ## Usage
 
@@ -26,6 +26,10 @@ m365 spo tenant commandset get [options]
 ```
 
 <Global />
+
+## Remarks
+
+This command can be used for retrieving a ListView Command Set that's installed tenant-wide. To retrieve a ListView Command Set from a specific site, view our dedicated [spo commandset get](../commandset/commandset-get.mdx) command.
 
 ## Examples
 
