--- a/docs/docs/cmd/spo/tenant/tenant-commandset-list.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-commandset-list.mdx
@@ -16,6 +16,10 @@ m365 spo tenant commandset list [options]
 
 <Global />
 
+## Remarks
+
+This command can be used for retrieving a list of ListView Command Sets that are installed tenant-wide. To retrieve a list of ListView Command Sets added to a specific site, view our dedicated [spo commandset list](../commandset/commandset-list.mdx) command.
+
 ## Examples
 
 Retrieves a list of ListView Command Sets.
