--- a/docs/docs/cmd/spo/tenant/tenant-commandset-remove.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-commandset-remove.mdx
@@ -2,7 +2,7 @@ import Global from '/docs/cmd/_global.mdx';
 
 # spo tenant commandset remove
 
-Removes a ListView Command Set that is installed tenant wide
+Removes a ListView Command Set that is installed tenant-wide
 
 ## Usage
 
@@ -27,6 +27,10 @@ m365 spo tenant commandset remove [options]
 ```
 
 <Global />
+
+## Remarks
+
+This command can be used for removing a ListView Command Set that's installed tenant-wide. To remove a ListView Command Set from a specific site, view our dedicated [spo commandset remove](../commandset/commandset-remove.mdx) command.
 
 ## Examples
 
