--- a/docs/docs/cmd/spo/commandset/commandset-remove.mdx
+++ b/docs/docs/cmd/spo/commandset/commandset-remove.mdx
@@ -2,7 +2,7 @@ import Global from '/docs/cmd/_global.mdx';
 
 # spo commandset remove
 
-Remove a ListView Command Set that is added to a site.
+Remove a ListView Command Set that is added to a site
 
 ## Usage
 
@@ -33,6 +33,10 @@ m365 spo commandset remove [options]
 ```
 
 <Global />
+
+## Remarks
+
+This command can be used for removing a ListView Command Set from a specific site. To remove a tenant-wide installed ListView Command Set, view our dedicated [spo tenant commandset remove](../tenant/tenant-commandset-remove.mdx) command.
 
 ## Examples
 
