--- a/docs/docs/cmd/spo/tenant/tenant-applicationcustomizer-get.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-applicationcustomizer-get.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 
 # spo tenant applicationcustomizer get
 
-Get an application customizer that is installed tenant wide
+Get an application customizer that is installed tenant-wide
 
 ## Usage
 
@@ -46,6 +46,10 @@ Retrieves an application customizer by clientSideComponentId.
 ```sh
 m365 spo tenant applicationcustomizer get --clientSideComponentId 7096cded-b83d-4eab-96f0-df477ed7c0bc
 ```
+
+## Remarks
+
+This command can be used for retrieving tenant-wide application customizer. To retrieve an application customizer from a specific site, view our dedicated [spo applicationcustomizer get](../applicationcustomizer/applicationcustomizer-get.mdx) command.
 
 ## Response
 
