--- a/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-get.mdx
+++ b/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-get.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 
 # spo applicationcustomizer get
 
-Get an application customizer that is added to a site.
+Get an application customizer that is added to a site
 
 ## Usage
 
@@ -58,6 +58,10 @@ Retrieves an application customizer by title available at the site scope.
 ```sh
 m365 spo applicationcustomizer get --title "Some customizer" --webUrl https://contoso.sharepoint.com/sites/sales --scope site
 ```
+
+## Remarks
+
+This command can be used for retrieving an application customizer from a specific site. To retrieve a tenant-wide application customizer, view our dedicated [spo tenant applicationcustomizer get](../tenant/tenant-applicationcustomizer-get.mdx) command.
 
 ## Response
 
