--- a/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-list.mdx
+++ b/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-list.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 
 # spo applicationcustomizer list
 
-Get a list of application customizers that are added to a site.
+Get a list of application customizers that are added to a site
 
 ## Usage
 
@@ -31,6 +31,10 @@ Retrieves a list of application customizers.
 ```sh
 m365 spo applicationcustomizer list --webUrl https://contoso.sharepoint.com/sites/sales
 ```
+
+## Remarks
+
+This command can be used for retrieving a list of application customizers from a specific site. To retrieve a list of tenant-wide installed application customizers, view our dedicated [spo tenant applicationcustomizer list](../tenant/tenant-applicationcustomizer-list.mdx) command.
 
 ## Response
 
