--- a/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-set.mdx
+++ b/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-set.mdx
@@ -53,6 +53,8 @@ When using the `--clientSideComponentProperties` option it's possible to enter a
 
 :::
 
+This command can be used for updating an application customizer from a specific site. To update a tenant-wide installed application customizer, view our dedicated [spo tenant applicationcustomizer set](../tenant/tenant-applicationcustomizer-set.mdx) command.
+
 ## Examples
 
 Updates the title of an application customizer on the sales site
