--- a/docs/docs/cmd/spo/commandset/commandset-get.mdx
+++ b/docs/docs/cmd/spo/commandset/commandset-get.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 
 # spo commandset get
 
-Get a ListView Command Set that is added to a site.
+Get a ListView Command Set that is added to a site
 
 ## Usage
 
@@ -36,6 +36,8 @@ m365 spo commandset get [options]
 ## Remarks
 
 If the command finds multiple command sets with the specified title, it will prompt you to disambiguate which command set it should use, listing the discovered IDs.
+
+This command can be used for retrieving a ListView Command Set from a specific site. To retrieve a tenant-wide ListView Command Set, view our dedicated [spo tenant commandset get](../tenant/tenant-commandset-get.mdx) command.
 
 ## Examples
 
