--- a/docs/docs/cmd/spo/commandset/commandset-list.mdx
+++ b/docs/docs/cmd/spo/commandset/commandset-list.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 
 # spo commandset list
 
-Get a list of ListView Command Sets that are added to a site.
+Get a list of ListView Command Sets that are added to a site
 
 ## Usage
 
@@ -19,10 +19,14 @@ m365 spo commandset list [options]
 : The url of the site.
 
 `-s, --scope [scope]`
-: Scope of the ListView Command Sets. Allowed values `Site`, `Web`, `All`. Default to `All`
+: Scope of the ListView Command Sets. Allowed values: `Site`, `Web`, `All`. Defaults to `All`
 ```
 
 <Global />
+
+## Remarks
+
+This command can be used for retrieving a list of ListView Command Sets from a specific site. To retrieve a list of tenant-wide ListView Command Sets, view our dedicated [spo tenant commandset list](../tenant/tenant-commandset-list.mdx) command.
 
 ## Examples
 
