--- a/docs/docs/cmd/spo/tenant/tenant-commandset-set.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-commandset-set.mdx
@@ -2,7 +2,7 @@ import Global from '/docs/cmd/_global.mdx';
 
 # spo tenant commandset set
 
-Updates a ListView Command Set that is installed tenant wide
+Updates a ListView Command Set that is installed tenant-wide
 
 ## Usage
 
@@ -50,6 +50,8 @@ m365 spo tenant commandset set [options]
 When using the `--clientSideComponentProperties` option it's possible to enter a JSON string. In PowerShell 5 to 7.2 [specific escaping rules](./../../../user-guide/using-cli.mdx#escaping-double-quotes-in-powershell) apply due to an issue. Remember that you can also use [file tokens](./../../../user-guide/using-cli.mdx#passing-complex-content-into-cli-options) instead.
 
 :::
+
+This command can be used for updating a tenant-wide installed ListView Command Set. To update a ListView Command Set from a specific site, view our dedicated [spo commandset set](../commandset/commandset-set.mdx) command.
 
 ## Examples
 
