Adds more docs info for 'purview auditlog list'

--- a/docs/docs/cmd/purview/auditlog/auditlog-list.mdx
+++ b/docs/docs/cmd/purview/auditlog/auditlog-list.mdx
@@ -143,3 +143,7 @@ m365 purview auditlog list --contentType SharePoint --startTime "2023-01-01T00:0
   </TabItem>
 </Tabs>
 
+## More information
+
+- Explanation of all available audit log activities/operations: https://learn.microsoft.com/en-us/purview/audit-log-activities
+- Explanation of all available audit log properties: https://learn.microsoft.com/en-us/purview/audit-log-detailed-properties
