--- a/docs/docs/about/team.mdx
+++ b/docs/docs/about/team.mdx
@@ -756,6 +756,12 @@ Do you want to know the curious and bright minds behind the CLI for Microsoft 36
     x: 'vrdmn'
   },
   {
+    name: 'Vedant Lakshminarayanan',
+    company: '',
+    github: 'Vedu1996',
+    x: ''
+  },
+  {
     name: 'Velin Georgiev',
     company: '',
     github: 'VelinGeorgiev',
