Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -9,6 +9,9 @@ sidebar_position: 4
 ### Changes
 
 - added new eslint rule: Prevent usage of 'ByServerRelativeUrl' endpoint [#5333](https://github.com/pnp/cli-microsoft365/issues/5333)
+- added ability to get the current logged-in user using [spo user get](../cmd/spo/user/user-get.mdx) [#5513](https://github.com/pnp/cli-microsoft365/issues/5513)
+- fixed error message for [spo feature disable](../cmd/spo/feature/feature-disable.mdx) and [spo feature enable](../cmd/spo/feature/feature-enable.mdx) [#5491](https://github.com/pnp/cli-microsoft365/issues/5491)
+- made the command spinner stream configurable by using errorOutput config [#5521](https://github.com/pnp/cli-microsoft365/issues/5521)
 
 ## [v7.0.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.0.0)
 
