--- a/docs/docs/cmd/aad/group/group-user-list.mdx
+++ b/docs/docs/cmd/aad/group/group-user-list.mdx
@@ -25,6 +25,11 @@ m365 aad group user list [options]
 : Filter the results to only users with the given role: `Owner`, `Member`.
 ```
 
+`-p, --properties [properties]`
+: Comma-separated list of properties to retrieve.
+
+`-f, --filter [filter]`
+: OData filter to use to query the list of users with.
 <Global />
 
 ## Examples
@@ -41,6 +46,18 @@ List all owners from a group specified by display name.
 m365 aad group user list --groupDisplayName Developers --role Owner
 ```
 
+List all group users from a group specified by name. For each one return the display name and e-mail address
+
+```sh
+m365 aad group user list --groupDisplayName Developers --properties "displayName,mail"
+```
+
+List all group members that are guest users.
+
+```sh
+m365 aad group user list --groupDisplayName Developers --filter "userType eq 'Guest'"
+```
+
 ## Response
 
 <Tabs>
@@ -52,7 +69,12 @@ m365 aad group user list --groupDisplayName Developers --role Owner
       "id": "da52218e-4822-4ac6-b41d-255e2059655e",
       "displayName": "Adele Vance",
       "userPrincipalName": "AdeleV@contoso.OnMicrosoft.com",
-      "userType": "Member"
+      "givenName": "Adele",
+      "surname": "Vance",
+      "roles": [
+        "Owner",
+        "Member"
+      ]
     }
   ]
   ```
@@ -61,17 +83,17 @@ m365 aad group user list --groupDisplayName Developers --role Owner
   <TabItem value="Text">
 
   ```text
-  id                                    displayName           userPrincipalName                     userType
+  id                                    displayName           userPrincipalName                     roles
   ------------------------------------  --------------------  ------------------------------------  --------
-  da52218e-4822-4ac6-b41d-255e2059655e  Adele Vance           AdeleV@contoso.OnMicrosoft.com        Member
+  da52218e-4822-4ac6-b41d-255e2059655e  Adele Vance           AdeleV@contoso.OnMicrosoft.com        Owner,Member
   ```
 
   </TabItem>
   <TabItem value="CSV">
 
   ```csv
-  id,displayName,userPrincipalName,userType
-  da52218e-4822-4ac6-b41d-255e2059655e,Adele Vance,AdeleV@contoso.OnMicrosoft.com,Member
+  id,displayName,userPrincipalName,givenName,surname
+  da52218e-4822-4ac6-b41d-255e2059655e,Adele Vance,AdeleV@contoso.OnMicrosoft.com,Adele,Vance
   ```
 
   </TabItem>
@@ -89,7 +111,8 @@ m365 aad group user list --groupDisplayName Developers --role Owner
   id | da52218e-4822-4ac6-b41d-255e2059655e
   displayName | Adele Vance
   userPrincipalName | AdeleV@contoso.OnMicrosoft.com
-  userType | Member
+  givenName | Adele
+  surname | Vance
   ```
 
   </TabItem>
